# rusted-zip

./: Cargo.toml  Install-RustedZip.ps1  Install-TurboZip.ps1  README.md  install_context_menu.reg
src/: main.rs
