[package]
name = "rustedzip"
version = "1.0.0"
edition = "2021"
description = "High-performance zip/unzip CLI for Windows, built with Rust"
authors = ["Super-Kenil"]

[[bin]]
name = "rustedzip"
path = "src/main.rs"

[dependencies]
flate2 = { version = "1.0" }
zip = { version = "2", default-features = false, features = ["deflate"] }
walkdir = "2"
rayon = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"